--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    
+     height:100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: hsl(0, 0%, 12%);
-    margin-top: 15.7vh;
+    margin-top: 15.8vh;
     height: 38.2rem;
     width: 24rem;
     border-radius: 13px;
